# VPhysics-Box3D

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.md
.github/workflows/: ci.yml
sdk/: CMakeLists.txt
sdk/compat/: typeinfo.h
vphysics_box3d/: CMakeLists.txt  cbase.cpp  cbase.h  vbox_collide.cpp  vbox_collide.h  vbox_constraints.cpp  vbox_constraints.h  vbox_controller_airboat.cpp  vbox_controller_airboat.h  vbox_controller_fluid.cpp  vbox_controller_fluid.h  vbox_controller_jeep.cpp  vbox_controller_jeep.h  vbox_controller_motion.cpp  vbox_controller_motion.h  vbox_controller_player.cpp  vbox_controller_player.h  vbox_controller_shadow.cpp  vbox_controller_shadow.h  vbox_controller_vehicle.cpp  vbox_controller_vehicle.h  vbox_environment.cpp  vbox_environment.h  vbox_friction.cpp  vbox_friction.h  vbox_interface.cpp  vbox_interface.h  vbox_keyvalues_schema.cpp  vbox_keyvalues_schema.h  vbox_object.cpp  vbox_object.h  vbox_objectpairhash.cpp  vbox_objectpairhash.h  vbox_parse.cpp  vbox_parse.h  vbox_surfaceprops.cpp  vbox_surfaceprops.h  vbox_util.h
vphysics_box3d/compat/: box3d_msvc32_compat.c  branch_overrides.h  compat_asw.h  compat_sdk2013.h
